initial msal setup
